fixed line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2495,3 +2495,7 @@ section {
   font-size: 13px;
   color: #012970;
 }
+
+li{
+  margin: 15px 0;
+}
